image size changes

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       <div id="container"
         class="px-5 ml-auto mr-auto w-full sm:max-w-[600px] md:max-w-[720px] lg:max-w-[980px] xl:max-w-[1240px] ">
         <div class="ml-[-7.5px] mr-[-7.5px] flex flex-wrap ">
-          <div class="px-[7px] mb-[21px] w-full md:flex-[0_0_50%] md:max-w-[50%] xl:flex-[0_0_33.3%] xl:max-w-[33.3%] ">
+          <div class="px-[7px] mb-[21px] w-full md:flex-[0_0_50%] md:max-w-[50%] xl:flex-[0_0_33.3%] xl:max-w-[33.3%]">
             <a href="" class="relative">
               <div class="relative">
                 <img class="absolute top-0 hover:opacity-0 transition duration-300 w-full h-full object-cover "
@@ -306,12 +306,12 @@
               </p>
             </a>
           </div>
-          <div class="px-[7px] mb-[21px] w-full md:flex-[0_0_50%] md:max-w-[50%] xl:flex-[0_0_33.3%] xl:max-w-[33.3%]">
+          <div class="px-[7px] mb-[21px] w-full md:flex-[0_0_50%] md:max-w-[50%] xl:flex-[0_0_33.3%] xl:max-w-[33.3%] ">
             <a href="" class="relative">
               <div class="relative">
-                <img class="absolute top-0 hover:opacity-0 transition duration-300 w-full h-full object-cover "
+                <img class="absolute top-0 hover:opacity-0 transition duration-300 w-full h-full object-cover xl:h-[219.77px]"
                   src="assets/module.webp" alt="">
-                <img class="w-full h-full" src="assets/btn.webp" alt="">
+                <img class="w-full h-full xl:h-[219.77px]" src="assets/btn.webp" alt="">
               </div>
               <div class="pt-[7px] text-[#1a2456] leading-[21px] flex justify-between">
                 <h1 class="text-[17.5px] font-[600]  tracking-[1.5px] mb-[7px] md:text-[18.5px]">AUDIO CONSOLE</h1>
@@ -411,7 +411,7 @@
           <div class="px-[7px] mb-[21px] w-full md:flex-[0_0_50%] md:max-w-[50%] xl:flex-[0_0_33.3%] xl:max-w-[33.3%]">
             <a href="" class="relative">
               <div class="relative">
-                <img class=" w-full h-full object-cover " src="assets/video.webp" alt="">
+                <img class=" w-full h-full object-cover xl:h-[260px] " src="assets/video.webp" alt="">
               </div>
               <div class="pt-[7px] text-[#1a2456] leading-[21px] flex justify-between">
                 <h1 class="text-[17.5px] font-[600]  tracking-[1.5px] mb-[7px] md:text-[18.5px]">AUDIO CONSOLE</h1>
@@ -457,9 +457,9 @@
             <a href="" class="relative">
               <div class="relative">
                 <img
-                  class="absolute top-0 hover:opacity-0 transition duration-300 h-full w-full object-cover md:h-[240px] lg:h-[333px]"
+                  class="absolute top-0 hover:opacity-0 transition duration-300 h-full w-full object-cover md:h-[240px] lg:h-[333px] xl:h-[281px]"
                   src="assets/care.jpg" alt="">
-                <img class="w-full h-full md:h-[240px] lg:h-[333px]" src="assets/care-red.webp" alt="">
+                <img class="w-full h-full md:h-[240px] lg:h-[333px] xl:h-[281px]" src="assets/care-red.webp" alt="">
               </div>
               <div class="pt-[7px] text-[#1a2456] leading-[21px] flex justify-between">
                 <h1 class="text-[17.5px] font-[600]  tracking-[1.5px] mb-[7px] md:text-[18.5px]">AUDIO CONSOLE</h1>
